test_suite/tests/ui/malformed/bound.stderr
error: malformed bound attribute, expected `bound(serialize = ..., deserialize = ...)`
 --> $DIR/bound.rs:5:19
  |
5 |     #[serde(bound(unknown))]
  |                   ^^^^^^^
