test_suite/tests/ui/malformed/bound.rs
use serde_derive::Serialize;

#[derive(Serialize)]
struct S {
    #[serde(bound(unknown))]
    x: (),
}

fn main() {}
